Fix hero image on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -436,16 +436,6 @@ p {
     }
 }
 
-@media (max-width: 700px) {
-    .hero {
-        background-size: 140%;
-    }
-
-    .content h1 {
-        font-size: 3.5rem;
-    }
-}
-
 /* =============================================================
    LINKS PAGE
 ============================================================= */
